--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/terratv_1000_large_2x.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/terratv_1000_large_2x.jpg" class="img-responsive" alt="Screen showing a TerraTV home page.">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Terra Networks</h4>
@@ -158,7 +158,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/easilocks_483_medium_2x.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/easilocks_483_medium_2x.png" class="img-responsive" alt="Easilocks logo.">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Easilocks WebSite</h4>
@@ -172,7 +172,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/flexmaint_1000_large_2x.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/flexmaint_1000_large_2x.png" class="img-responsive" alt="Flexmaint Software">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Flexmaint Software</h4>
@@ -197,7 +197,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/php.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/php.jpg" alt="PHP logo.">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -212,7 +212,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="Plane photo.">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -228,7 +228,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="Computer on a table.">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -244,7 +244,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="Snow-capped mountains">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -260,7 +260,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/responsive.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/responsive.jpg" alt="A computer, tablet and cellphone.">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -294,22 +294,22 @@ Acted as a full-stack developer, mainly focusing on front-end development.</p>
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/jquery-logo.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/jquery-logo.png" class="img-responsive img-centered" alt="jQeury logo">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/html5.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/html5.png" class="img-responsive img-centered" alt="HTML5 logo">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/css3.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/css3.png" class="img-responsive img-centered" alt="CSS3 logo">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/logo-angularjs.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/logo-angularjs.png" class="img-responsive img-centered" alt="AngularJS logo">
                     </a>
                 </div>
             </div>
@@ -402,7 +402,7 @@ Acted as a full-stack developer, mainly focusing on front-end development.</p>
                         <div class="modal-body">
                             <h2>TerraTV Project</h2>
                             <p class="item-intro text-muted"></p>
-                            <img class="img-responsive img-centered" src="img/portfolio/terratv_1000_large_2x.jpg" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/terratv_1000_large_2x.jpg" alt="Screen showing a TerraTV home page.">
                             <p><a href="http://terratv.com.br">Terra TV</a> is the product for on demand video of Terra portal. The goal was to create a video experience that is more integrated with other contents without loosing TerraTV's brand recognition by users and advertisers. The redesign highlights featured videos and gives a full navigation to all video channels. A color code identifies the main channels and guides users to the subjects of interest.</p>
                             <ul class="list-inline">
                                 <li>Date: July 2013</li>
@@ -432,7 +432,7 @@ Acted as a full-stack developer, mainly focusing on front-end development.</p>
                         <div class="modal-body">
                             <h2>Easilocks Project</h2>
                             <p class="item-intro text-muted">   </p>
-                            <img class="img-responsive img-centered" src="img/portfolio/easilocks_483_medium_2x.png" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/easilocks_483_medium_2x.png" alt="Easilocks logo">
                             <p><a href="http://easilocks.com/">Easilocks</a> WebSite is to satisfy customers who want to know more about the brand, who already know the brand and want purchase products, buy training, find physical stores all over the world and some more functions.</p>
                             <p>With the divisions of areas on the website facilitate the identification and utilization of the User, they can search and navigate between information.</p>
                             <ul class="list-inline">
@@ -463,7 +463,7 @@ Acted as a full-stack developer, mainly focusing on front-end development.</p>
                         <div class="modal-body">
                             <h2>FlexMaint Project</h2>
                             <p class="item-intro text-muted"></p>
-                            <img class="img-responsive img-centered" src="img/portfolio/flexmaint_1000_large_2x.png" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/flexmaint_1000_large_2x.png" alt="Flexmaint Software">
                             <p>FlexMaint is a browser based Preventive Maintenance CMMS Software. With it’s ultimate flexibility, it can be customised by the user. Apart from a few selected mandatory items, every other field on the screen can be turned on or off, made mandatory or not, or read only or not. FlexMaint™ also allows clients total profile control including the asset tree structure, thereby limiting the user privileges by only allowing access to certain assets.</p>
                             <p>You can see here: <a href="http://flexmaint.com">Flexmaint.com</a>.</p>
                             <ul class="list-inline">
