--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="expertise-heading">Fron-End</h4>
+                    <h4 class="expertise-heading">Front-End</h4>
                     <ul class="media-list">
                         <li class="text-muted">HTML5</li>
                         <li class="text-muted">CSS3</li>
@@ -133,7 +133,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Projects</h2>
-                    <h3 class="section-subheading text-muted">Mainly projects that I've worked on.</h3>
+                    <h3 class="section-subheading text-muted">Main projects that I've worked on.</h3>
                 </div>
             </div>
             <div class="row">
@@ -162,7 +162,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Easilocks WebSite</h4>
-                        <p class="text-muted">Easilocks WebSite is to know more about the brand, purchase products, buy training, find physical stores.</p>
+                        <p class="text-muted">Easilocks WebSite is to know more about the brand, purchase products, buy training and find physical stores.</p>
                     </div>
                 </div>
                 <div class="col-md-4 portfolio-item">
@@ -176,7 +176,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Flexmaint Software</h4>
-                        <p class="text-muted">A CMMS Software migrated fromn a desktop version to a new web based version.</p>
+                        <p class="text-muted">A CMMS Software migrated from a desktop version to a new web based version.</p>
                     </div>
                 </div>
             </div>
