--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">
-                    Here you'll see how obsessive thorough I'm in responsive Web Development, using HTML5, CSS3, jQuery and Bootstrap
+                    Here you'll see how obsessive thorough I'm with responsive Web Development, using HTML5, CSS3, jQuery and Bootstrap
                 </div>
                 <div class="intro-heading">Welcome To My World</div>
                 <a href="#expertise" class="page-scroll btn btn-xl">Tell Me More</a>
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Expertise and Skills</h2>
-                    <h3 class="section-subheading text-muted">I've worked with many technologies already, but those ones I can say that is realy what I feel confortable to work.</h3>
+                    <h3 class="section-subheading text-muted">Thoughout the years I have worked with mainstream technologies and I am an expert using the following tools and environments:</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -162,7 +162,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Easilocks WebSite</h4>
-                        <p class="text-muted">Easilocks WebSite is to know more about the brand, purchase products, buy training and find physical stores.</p>
+                        <p class="text-muted">Easilocks is a boutique and ecommerce website aimed to promote their products and services.</p>
                     </div>
                 </div>
                 <div class="col-md-4 portfolio-item">
@@ -264,7 +264,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Desember 2013</h4>
+                                    <h4>December 2013</h4>
                                     <h4 class="subheading">Xetec</h4>
                                     <h4 class="subheading">UI/UX Engineer and Scrum Master</h4>    
                                 </div>
