Changed positions of section

--- a/index.html
+++ b/index.html
@@ -127,63 +127,34 @@
         </div>
     </section>
 
-    <!-- Project Grid Section -->
-    <section id="project" class="bg-light-gray">
+  <!-- Technologies Aside -->
+    <aside class="technologies bg-light-gray">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Projects</h2>
-                    <h3 class="section-subheading text-muted">Main projects that I've worked on.</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/terratv_1000_large_2x.jpg" class="img-responsive" alt="Screen showing a TerraTV home page.">
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/jquery-logo.png" class="img-responsive img-centered" alt="jQeury logo">
                     </a>
-                    <div class="portfolio-caption">
-                        <h4>Terra Networks</h4>
-                        <p class="text-muted">Terra Networks, S.A. is a Spanish Internet multinational company with headquarters in Spain and Brazil.</p>
-                    </div>
                 </div>
-                <div class="col-md-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/easilocks_483_medium_2x.png" class="img-responsive" alt="Easilocks logo.">
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/html5.png" class="img-responsive img-centered" alt="HTML5 logo">
                     </a>
-                    <div class="portfolio-caption">
-                        <h4>Easilocks WebSite</h4>
-                        <p class="text-muted">Easilocks is a boutique and ecommerce website aimed to promote their products and services.</p>
-                    </div>
                 </div>
-                <div class="col-md-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/flexmaint_1000_large_2x.png" class="img-responsive" alt="Flexmaint Software">
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/css3.png" class="img-responsive img-centered" alt="CSS3 logo">
                     </a>
-                    <div class="portfolio-caption">
-                        <h4>Flexmaint Software</h4>
-                        <p class="text-muted">A CMMS Software migrated from a desktop version to a new web based version.</p>
-                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/logo-angularjs.png" class="img-responsive img-centered" alt="AngularJS logo">
+                    </a>
                 </div>
             </div>
         </div>
-    </section>
-
-    <!-- Experience Section -->
+    </aside>
+<!-- Experience Section -->
     <section id="experience">
         <div class="container">
             <div class="row">
@@ -288,37 +259,68 @@ Acted as a full-stack developer, mainly focusing on front-end development.</p>
         </div>
     </section>
 
-    <!-- Technologies Aside -->
-    <aside class="technologies bg-light-gray">
+    <!-- Project Grid Section -->
+    <section id="project" class="bg-light-gray">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/jquery-logo.png" class="img-responsive img-centered" alt="jQeury logo">
-                    </a>
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Projects</h2>
+                    <h3 class="section-subheading text-muted">Main projects that I've worked on.</h3>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/html5.png" class="img-responsive img-centered" alt="HTML5 logo">
+            </div>
+            <div class="row">
+                <div class="col-md-4 portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/terratv_1000_large_2x.jpg" class="img-responsive" alt="Screen showing a TerraTV home page.">
                     </a>
+                    <div class="portfolio-caption">
+                        <h4>Terra Networks</h4>
+                        <p class="text-muted">Terra Networks, S.A. is a Spanish Internet multinational company with headquarters in Spain and Brazil.</p>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/css3.png" class="img-responsive img-centered" alt="CSS3 logo">
+                <div class="col-md-4 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/easilocks_483_medium_2x.png" class="img-responsive" alt="Easilocks logo.">
                     </a>
+                    <div class="portfolio-caption">
+                        <h4>Easilocks WebSite</h4>
+                        <p class="text-muted">Easilocks is a boutique and ecommerce website aimed to promote their products and services.</p>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/logo-angularjs.png" class="img-responsive img-centered" alt="AngularJS logo">
+                <div class="col-md-4 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/flexmaint_1000_large_2x.png" class="img-responsive" alt="Flexmaint Software">
                     </a>
+                    <div class="portfolio-caption">
+                        <h4>Flexmaint Software</h4>
+                        <p class="text-muted">A CMMS Software migrated from a desktop version to a new web based version.</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </aside>
+    </section>
     
     <!-- Contact Section -->
     <section id="contact">
-        <div class="container">
+        <!-- Map here -->
+        <div id="mapDiv">
+        <div class="container" id="map">
+        
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
@@ -342,18 +344,19 @@ Acted as a full-stack developer, mainly focusing on front-end development.</p>
                                 <h4 class="section-subheading text-muted">Current Address: <strong class="section-heading">Dublin, IE</strong></h4>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <!--<div class="col-md-6">
                             <div class="form-group">
-                               <!-- Map here -->
+                                Map here
                                <div id="mapDiv">
                                     <div id="map"></div>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="clearfix"></div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
