--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">
-                    Here you'll see how obsessive thorough I'm with responsive Web Development, using HTML5, CSS3, jQuery and Bootstrap
+                    Here you'll see how I focus on crafting seamless solutions from code to cloud
                 </div>
                 <div class="intro-heading">Welcome To My World</div>
                 <a href="#expertise" class="page-scroll btn btn-xl">Tell Me More</a>
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Expertise and Skills</h2>
-                    <h3 class="section-subheading text-muted">Thoughout the years I have worked with mainstream technologies and I am an expert using the following tools and environments:</h3>
+                    <h3 class="section-subheading text-muted">Thoughout the years I have worked with mainstream technologies as well as proprietary ones, considering myself expert in different technologies like:</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -96,7 +96,7 @@
                     <ul class="media-list">
                         <li class="text-muted">HTML5</li>
                         <li class="text-muted">CSS3</li>
-                        <li class="text-muted">jQuery</li>
+                        <li class="text-muted">Bootstrap</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -107,7 +107,7 @@
                     <h4 class="expertise-heading">General</h4>
                     <ul class="media-list">
                         <li class="text-muted">Analisys</li>
-                        <li class="text-muted">Scrum</li>
+                        <li class="text-muted">Agile</li>
                         <li class="text-muted">GIT</li>
                     </ul>
                 </div>
@@ -119,7 +119,7 @@
                     <h4 class="expertise-heading">Back-End</h4>
                     <ul class="media-list">
                         <li class="text-muted">Java</li>
-                        <li class="text-muted">PHP</li>
+                        <li class="text-muted">Python</li>
                         <li class="text-muted">SQL</li>
                     </ul>
                 </div>
@@ -231,7 +231,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/responsive.jpg" alt="A computer, tablet and cellphone.">
+                                <img class="img-circle img-responsive" src="img/about/5.jpg" alt="A computer, tablet and cellphone.">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -243,6 +243,38 @@
                                     <p class="text-muted">Played a main role in the analysis and development of a maintenance system that was built from scratch.
 Acted as a full-stack developer, mainly focusing on front-end development.</p>
                                     <p class="text-muted">Technologies: Bootstrap, jQuery, HTML5, CSS3, Java, Spring3, Maven, Tomcat, JSON, SQLServer, iReport.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/6.jpg" alt="e-games and gift cards.">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>March 2016</h4>
+                                    <h4 class="subheading">YouPass</h4>
+                                    <h4 class="subheading">Web Developer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Played </p>
+                                    <p class="text-muted">Technologies: PHP, </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/workday.png" alt="Workday logo.">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>July 2017</h4>
+                                    <h4 class="subheading">Workday</h4>
+                                    <h4 class="subheading">Software Engineer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Played </p>
+                                    <p class="text-muted">Technologies: Xpresso, </p>
                                 </div>
                             </div>
                         </li>
